# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.15.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Hack around http://bugs.gentoo.org/show_bug.cgi?id=255711
	  (cannot compare const_backward_iterator with backward_iterator).

*eix-0.15.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow relative (to PORTDIR) paths and magic "*" (for PORTDIR_OVERLAY)
	  in EIX_LOCAL_SETS and let the default contain "*/sets" and "sets".
	  This is to deal with the de facto standard of some overlays to put
	  new sets into $OVERLAY/sets.
	- Introduce FORCE_PERCENTAGE for better cron-job handling
	  http://sourceforge.net/tracker/index.php?func=detail&aid=2391952&
	  group_id=128101&atid=710611
	- Allow passing of options from eix-sync to update-eix.
	- More regexp-defaults (e.g. when @.* is searched).

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fix format string in ansicolor.cc for bug #254412

*eix-0.15.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Make regex-matches in DEFAULT_MATCH_{FIELD,ALGORITHM}
	  case-sensitive to make LICENSE defaults reasonable, see
	  http://forums.gentoo.org/viewtopic.php?p=5285010
	  or http://bugs.gentoo.org/show_bug.cgi?id=248677
	- Change EPREFIX_SOURCE default to %{EIX_PREFIX}, see
	  http://bugs.gentoo.org/show_bug.cgi?id=247227

*eix-0.15.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New match algorithms: --substring (-z), --begin (-b), --end
	- Introduce DEFAULT_MATCH_ALGORITHM. This should avoid some surprises
	  like "eix libstdc++-v3" looking for regular expressions as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245487
	  or "eix @kde" also matching e.g. @kde3 as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245773
	- Introduce DEFAULT_MATCH_FIELD; remove MATCH_.*_IF and MATCH_ORDER.
	- Fix order for <full...> and <=full...>. Slot comes after version.
	- Treat ADD_CACHE_METHOD and ADD_OVERRIDE_CACHE_METHOD only by
	  delayed substitution in CACHE_METHOD or OVERRIDE_CACHE_METHOD.